k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comin-employee-service
  namespace: comin-dev
  labels:
    app: comin-employee-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comin-employee-service
  template:
    metadata:
      labels:
        app: comin-employee-service
    spec:
      containers:
      - name: comin-employee-service
        image: ghcr.io/kaveeshag/comin-employee-service:996fa792d4f67a1ec33aa35ad5372947d7d4febf
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
