k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comin-employee-service-ingress
  namespace: comin-dev
spec:
  ingressClassName: nginx
  rules:
  - host: comin.kaveeshagimhana.com
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: comin-employee-service
            port:
              number: 80
      - path: /api/v1/employees
        pathType: Prefix
        backend:
          service:
            name: comin-employee-service
            port:
              number: 80
      - path: /api/v1/departments
        pathType: Prefix
        backend:
          service:
            name: comin-employee-service
            port:
              number: 80
      - path: /api/v1/managers
        pathType: Prefix
        backend:
          service:
            name: comin-employee-service
            port:
              number: 80
      - path: /api/v1/users
        pathType: Prefix
        backend:
          service:
            name: comin-employee-service
            port:
              number: 80
